--- a/package.json
+++ b/package.json
@@ -12,24 +12,32 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.64.1",
+    "@ton/core": "^0.60.1",
+    "@tonconnect/sdk": "^3.0.6",
+    "@tonconnect/ui-react": "^2.0.11",
     "@vkruglikov/react-telegram-web-app": "^1.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.1",
     "lucide-react": "^0.474.0",
     "ngrok": "^5.0.0-beta.2",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.3",
+    "stream-browserify": "^3.0.0",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
