--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_ENDPOINT="http://37.27.25.208:9000"
+VITE_API_ENDPOINT="https://kubotai.onrender.com"
+# VITE_API_ENDPOINT="https://welearnapi.fun"
